Removed nuget package. Replaced with simple reference

--- a/PurgeExpiredTokens/project.json
+++ b/PurgeExpiredTokens/project.json
@@ -2,8 +2,7 @@
   "frameworks": {
     "net46":{
       "dependencies": {
-        "Microsoft.ApplicationInsights": "2.1.0",
-        "WindowsAzure.Storage": "7.2.1"
+        "Microsoft.ApplicationInsights": "2.1.0"
       }
     }
    }
